commit from terminal

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/hero-bg.jpg" rel="icon">
-  <link href="assets/img/hero-bg.jpg" rel="apple-touch-icon">
+  <link href="img/hospital-xxl.png" rel="icon">
+  <link href="img/hospital-xxl.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -40,12 +40,6 @@
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
 
-  <!-- =======================================================
-  * Template Name: Medilab - v4.7.1
-  * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
 </head>
 
@@ -113,7 +107,7 @@
     </div>
     <div class="container">
       <h1>DR.OMKAR KAJALE</h1>
-      <h5>MBBS, DTCD , AFIH , CCEBDM <br> Diploma in Tuberculosis and Chest Diseases (DTCD)</h2>
+      <h5>MBBS, DTCD , AFIH , CCEBDM <br> Chest Physician and Interventional Pulmonologist</h2>
         <!-- <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a> -->
     </div>
 
@@ -132,12 +126,6 @@
               <!-- <h3>Why Choose Us?</h3> -->
               <div class="pic"><img src="img/shubh.jpeg" class="img-fluid" alt=""></div>
 
-              <!-- <p>
-                Our reputation for outstanding care and family-like atmosphere, together with advanced medical technology and facilities ensures we attract leading consultants and specialists
-              </p> -->
-              <!-- <div class="text-center">
-                <a href="#" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
-              </div> -->
             </div>
           </div>
           <div class="col-lg-8 d-flex align-items-stretch">
@@ -179,7 +167,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Make an Appointment</h2>
+          <h2>MAKE AN APPOINTMENT</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
@@ -608,7 +596,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Gallery</h2>
+          <h2>LABORATORY</h2>
           <h4>We have most advanced infra-structure and instruments, backed up by a team of medical experts, consultants
             & specialists supported by dedicated, trained and highly competent staff.</p>
         </div>
@@ -691,7 +679,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact Us</h2>
+          <h2>CONTACT US</h2>
           <p>YOUR HEALTH IS OUR RESPONSIBILITY</p>
         </div>
       </div>
@@ -768,7 +756,8 @@
     </section> 
     <!-- End Contact Section -->
 
-  </main><!-- End #main -->
+  </main>
+  <!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -827,17 +816,11 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="me-md-auto text-center text-md-start">
+      <!-- <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
           &copy; Copyright <strong><span>odd creatives and management</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/ -->
-        </div>
-      </div>
+      </div> -->
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
