--- a/AsthmaTips.html
+++ b/AsthmaTips.html
@@ -30,13 +30,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Medilab - v4.7.1
-  * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -347,7 +340,7 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact Us</h2>
+        <h2>CONTACT US</h2>
         <p>YOUR HEALTH IS OUR RESPONSIBILITY</p>
       </div>
     </div>
@@ -456,11 +449,6 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Times</h4>
             <ul>
-              <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">PULMONOLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">NEUROLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">HEPATOLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">PEDIATRICS</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">EYE CARE</a></li> -->
               <li>9:30 AM TO 7:30 PM</li>
               <li>MONDAY-SUNDAY</li>
             </ul>
@@ -480,17 +468,7 @@
 
     <div class="container d-md-flex py-4">
 
-      <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
-          &copy; Copyright <strong><span>odd creatives and management</span></strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/ -->
-        </div>
-      </div>
+  
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
