--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                       x-rays, blood tests, and allergy skin tests.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/asthma.jpg" alt="" class="img-fluid">
+                    <img src="img/services/asthma.webp" alt="asthma best doctor" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -308,7 +308,7 @@
                       5. Fever <br>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img//services/lungs.jpg" alt="" class="img-fluid">
+                    <img src="img//services/lungs.webp" alt="lungs specialist" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -330,7 +330,7 @@
                     </P>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/allergy.jpg" alt="" class="img-fluid">
+                    <img src="img/services/allergy.webp" alt="allergy specialist in pune" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -345,7 +345,7 @@
                       future episodes of sleep apnea.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/lungs-study.jpg" alt="" class="img-fluid">
+                    <img src="img/services/lungs-study.webp" alt="sleep study specialist in pune" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -360,7 +360,7 @@
                       throat and into your lungs.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/brono.jpg" alt="" class="img-fluid">
+                    <img src="img/services/brono.webp" alt="bronchoscopy specialist" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -377,7 +377,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/allergy.jpg" alt="" class="img-fluid">
+                    <img src="img/services/allergy.webp" alt="allergy specialist" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -397,7 +397,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/bluelungs.jpg" alt="" class="img-fluid">
+                    <img src="img/services/pul-fun-test.webp" alt="pulmonary function test" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -415,7 +415,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/thoro.jpg" alt="" class="img-fluid">
+                    <img src="img/services/thoro.webp" alt="thoracoscopy in pune" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -435,7 +435,7 @@
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="img/services/bluelungs.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/gallery/gal-4.webp" alt="pulmonary REHABITATION" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -607,64 +607,64 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-2.png" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-2.png" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-2.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-2.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-1.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-1.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-1.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-3.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-3.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-3.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-4.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-4.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-4.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-6.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-6.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-6.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-5.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-5.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-5.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gal-7.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/gal-7.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/gal-7.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/gal-7.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/extra 2.jpg.jpg" class="galelry-lightbox">
-                <img src="assets/img/gallery/extra 2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/extra 2.jpg.webp" class="galelry-lightbox">
+                <img src="assets/img/gallery/extra 2.webp" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -788,11 +788,6 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Times</h4>
-            <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">PULMONOLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">NEUROLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">HEPATOLOGY</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">PEDIATRICS</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">EYE CARE</a></li> -->
             <p>9:30 AM TO 7:30 PM <br> MONDAY-SUNDAY</h4>
               <br><br>
               <strong>Phone:</strong>
