index.html cha nge

--- a/AsthmaTips.html
+++ b/AsthmaTips.html
@@ -59,16 +59,16 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h4 class="logo me-auto"><a href="index.html"> सर्वे सन्तु निरामयाः</a></h4>
+      <h4 class="logo me-auto"><a href="/"> सर्वे सन्तु निरामयाः</a></h4>
 
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="./index.html">HOME</a></li>
-          <li><a class="nav-link scrollto" href="./index.html">SERVICES</a></li>
-          <li><a class="nav-link scrollto" href="./index.html">GALLERY</a></li>
+          <li><a class="nav-link scrollto active" href="/">HOME</a></li>
+          <li><a class="nav-link scrollto" href="/">SERVICES</a></li>
+          <li><a class="nav-link scrollto" href="/">GALLERY</a></li>
           <!-- <li><a class="nav-link scrollto" href="#departments">Departments</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#doctors">Doctors</a></li> -->
           <li class="dropdown"><a href="#"><span>WE CARE FOR YOU</span> <i class="bi bi-chevron-down"></i></a>
