--- a/index.html
+++ b/index.html
@@ -46,25 +46,17 @@
 <body>
 
   <!---for call and whatsapp button-->
-    <a href="tel:+919665914363" class="call_float " target="_blank"><i class="fa fa-phone call-icon"></i></a>
-    <a  class="whats-app" href="#" target="_blank"><i class="fa fa-whatsapp my-float"></i></a>
-    <!-- <a href="https://wa.me/918624080266" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a> -->
+  <!-- <a href="tel:+919665914363" class="call_float " target="_blank"><i class="fa fa-phone call-icon"></i></a>
+  <a class="whats-app" href="#" target="_blank"><i class="fa fa-whatsapp my-float"></i></a> -->
+  <!-- <a href="https://wa.me/918624080266" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a> -->
 
   <!-- ======= Top Bar ======= -->
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">info@dromkarkajale.com</a>
+        <i class="bi bi-envelope"></i> <a href="mailto:info@dromkarkajale.com">info@dromkarkajale.com</a>
         <i class="bi bi-phone"></i><a href="tel:+919665914363" class="call_float " target="_blank">+919665914363</a>
       </div>
-
-      </div>
-      <!-- <div class="d-none d-lg-flex social-links align-items-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div> -->
     </div>
   </div>
 
@@ -124,7 +116,7 @@
           <div class="col-lg-4 d-flex align-items-stretch">
             <div class="content">
               <!-- <h3>Why Choose Us?</h3> -->
-              <div class="pic"><img src="img/shubh.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/doctor.avif" class="img-fluid" alt=""></div>
 
             </div>
           </div>
@@ -753,7 +745,7 @@
         </div>
 
       </div>
-    </section> 
+    </section>
     <!-- End Contact Section -->
 
   </main>
