--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="container">
       <h1>DR.OMKAR KAJALE</h1>
-      <h5>MBBS, DTCD , AFIH , CCEBDM <br> Chest Physician and Interventional Pulmonologist</h2>
+      <h2>MBBS, DTCD , AFIH , CCEBDM <br> CHEST PHYSICIAN AND INTERVENTIONAL PULMONOLOGIST</h2>
         <!-- <a href="#appointment" class="appointment-btn scrollto"><span class="d-none d-md-inline">Make an</span> Appointment</a> -->
     </div>
 
