discard right click

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -43,7 +44,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
 </head>
 
-<body>
+<body oncontextmenu="return false">
 
   <!---for call and whatsapp button-->
   <!-- <a href="tel:+919665914363" class="call_float " target="_blank"><i class="fa fa-phone call-icon"></i></a>
